// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem test suite: dataCy 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="custom"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="custom-content"
  />
</li>
`;

exports[`ListItem test suite: default 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  >
    <span>
      "List Item"
    </span>
  </div>
</li>
`;

exports[`ListItem test suite: dense 1`] = `
<li
  className="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-6lnq02-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  />
</li>
`;

exports[`ListItem test suite: icon 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
      data-cy="list-item-icon"
      data-testid="AccountCircleIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20z"
      />
    </svg>
  </div>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  />
</li>
`;

exports[`ListItem test suite: loading 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content-loading"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>
</li>
`;

exports[`ListItem test suite: onClick 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "pointer",
    }
  }
>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  />
</li>
`;

exports[`ListItem test suite: selected 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding Mui-selected css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  />
</li>
`;
